--- a/todo-list-app/src/index.css
+++ b/todo-list-app/src/index.css
@@ -21,6 +21,7 @@ code {
 .blue{
   color: rgb(47, 95, 255);
   text-align: center;
+  list-style-position: inside;
 }
 .zone{
   background-color: rgb(0, 255, 234);
